src/test/ui/impl-trait/auto-trait-leak2.stderr
error[E0277]: `Rc<Cell<i32>>` cannot be sent between threads safely
  --> $DIR/auto-trait-leak2.rs:13:5
   |
LL | fn before() -> impl Fn(i32) {
   |                ------------ within this `impl Fn<(i32,)>`
...
LL | fn send<T: Send>(_: T) {}
   |            ---- required by this bound in `send`
...
LL |     send(before());
   |     ^^^^ `Rc<Cell<i32>>` cannot be sent between threads safely
   |
   = help: within `impl Fn<(i32,)>`, the trait `Send` is not implemented for `Rc<Cell<i32>>`
   = note: required because it appears within the type `[closure@$DIR/auto-trait-leak2.rs:7:5: 7:22]`
   = note: required because it appears within the type `impl Fn<(i32,)>`

error[E0277]: `Rc<Cell<i32>>` cannot be sent between threads safely
  --> $DIR/auto-trait-leak2.rs:16:5
   |
LL | fn send<T: Send>(_: T) {}
   |            ---- required by this bound in `send`
...
LL |     send(after());
   |     ^^^^ `Rc<Cell<i32>>` cannot be sent between threads safely
...
LL | fn after() -> impl Fn(i32) {
   |               ------------ within this `impl Fn<(i32,)>`
   |
   = help: within `impl Fn<(i32,)>`, the trait `Send` is not implemented for `Rc<Cell<i32>>`
   = note: required because it appears within the type `[closure@$DIR/auto-trait-leak2.rs:24:5: 24:22]`
   = note: required because it appears within the type `impl Fn<(i32,)>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
